tests/snapshots/examples_fixtures/aoc__2025__aoc_day11_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day11_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_part1.flx:44:13
   |
44 |     let r = put({}, "count", count)
   |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_part1.flx:45:5
   |
45 |     put(r, "memo", memo)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_part1.flx:49:11
   |
49 |     match get(r, "count") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_part1.flx:56:11
   |
56 |     match get(r, "memo") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day11_part1.flx:70:19
   |
70 |     let entries = [parse_entry(trim(line)) | line <- lines, trim(line) != "", find_char_from(trim(line), ":", 0) >= 0]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day11_part1.flx:71:5
   |
71 |     fold(entries, {}, /(g, e) -> put(g, e.0, e.1))
   |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_part1.flx:90:17
   |
90 |     let memo3 = put(memo2, node, total)
   |                 ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_part1.flx:95:17
   |
95 |     let memo2 = put(memo, node, 0)
   |                 ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_part1.flx:100:11
    |
100 |     match get(graph, node) {
    |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_part1.flx:110:11
    |
110 |     match get(memo, node) {
    |           ^^^

Hint:
  Define it first: let get = ...;

Found 10 errors.
== stdout ==
<not executed>
